libtracker-data: Allow calling tracker_db_manager_locale_changed() before init

This fixes an issue introduced in commit fa6317fbabb1a7, where the
direct backend would fail to find the 'db-locale.txt' marker due to the
global 'data_dir' path variable being NULL at the time it called
tracker_db_manager_locale_changed(). It would then report that the
locale had changed from 'unknown' to the system locale, and abort.

https://bugzilla.gnome.org/show_bug.cgi?id=676209